Fixed all spacing and image size issues

--- a/boot-desktop.css
+++ b/boot-desktop.css
@@ -1,5 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    max-width: 100vw;
+    width: 100vw;
     background-color: #030D2E;
     color: white;
     box-sizing: border-box;
@@ -10,8 +16,11 @@ body {
 
 .m-width {
     max-width: 2000px;
-    margin-top: 100px;
-    overflow-x: hidden;
+}
+
+.container-fluid {
+    width: fit-content;
+    max-width: 2000px;
 }
 
 .fixed-head {
@@ -21,10 +30,6 @@ body {
 .header-bg {
     background-color: #0D182D;
     width: 100%;
-}
-
-.container-fluid {
-    width: 100vw;
 }
 
 .fixed-head img {
@@ -79,7 +84,6 @@ body {
     position: relative; top: 150px;
     width: 100%;
     height: 620px;
-    /*background-color: #467aff;*/
 }
 
 .block1 {
@@ -436,12 +440,12 @@ h4 {
     justify-content: space-between;
 }
 
-.invisible-dv {
-    display: none;
+.download img {
+    cursor: pointer;
 }
 
-.s-hover {
-    cursor: pointer;
+.invisible-dv {
+    display: none;
 }
 
 
